--- a/app/src/main/res/layout/bottom_sheet_complex.xml
+++ b/app/src/main/res/layout/bottom_sheet_complex.xml
@@ -25,8 +25,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_apt"
-            bindItemList="@{viewModel.insightApts}"
+            android:id="@+id/rv_complex"
+            bindItemList="@{viewModel.complexes}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -36,9 +36,8 @@
             android:paddingTop="16dp"
             android:paddingBottom="40dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_handle"
             tools:itemCount="10"
-            tools:listitem="@layout/item_apt" />
+            tools:listitem="@layout/item_complex" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
