--- a/app/src/main/res/layout/item_visited_apt_complex.xml
+++ b/app/src/main/res/layout/item_visited_apt_complex.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="info.imdang.imdang.model.aptcomplex.AptComplexVo" />
+            type="info.imdang.imdang.model.aptcomplex.VisitAptComplexVo" />
     </data>
 
     <com.google.android.material.chip.Chip
