--- a/app/src/main/res/layout/activity_new_insight_list.xml
+++ b/app/src/main/res/layout/activity_new_insight_list.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
-            android:text="@{viewModel.newInsights.size() + `개`}"
+            android:text="@{viewModel.pagingState.itemCount + `개`}"
             android:textColor="@color/gray_900"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_divider"
@@ -66,7 +66,6 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_new_insight"
-            bindItemList="@{viewModel.newInsights}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:clipToPadding="false"
