--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -110,7 +110,7 @@
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:paddingHorizontal="20dp"
-            android:paddingVertical="24dp"
+            android:paddingBottom="24dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cg_notification"
