--- a/app/src/main/res/layout/fragment_home_exchange.xml
+++ b/app/src/main/res/layout/fragment_home_exchange.xml
@@ -64,7 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
-                    bindIntToString="@{viewModel.couponCount}"
+                    bindIntToString="@{viewModel.coupon.couponCount}"
                     android:textColor="@color/orange_500"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
