--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -21,8 +21,8 @@
             android:id="@+id/tl_indicator"
             android:layout_width="wrap_content"
             android:layout_height="8dp"
-            android:background="@color/white"
-            android:layout_marginBottom="152dp"
+            android:background="@color/gray_25"
+            android:layout_marginBottom="138dp"
             app:layout_constraintBottom_toTopOf="@id/tv_next_button"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
