--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="info.imdang.imdang.ui.login.onboarding.OnboardingViewModel" />
@@ -19,15 +21,28 @@
             bindImageResource="@{viewModel.imageRes}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="74dp"
+            android:layout_marginBottom="52dp"
             android:background="@color/gray_50"
             android:importantForAccessibility="no"
-            android:paddingTop="40dp"
+            android:paddingTop="62dp"
             app:layout_constraintBottom_toTopOf="@id/tv_onboarding_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/bg_onboarding_1" />
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_back"
+            android:visibility="@{viewModel.isBackVisible ? View.VISIBLE : View.GONE}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_back" />
 
         <TextView
             android:id="@+id/tv_onboarding_title"
