--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -105,7 +105,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_notification"
-            bindItemList="@{viewModel.notifications}"
+            bindItemList="@{viewModel.notificationItems}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:clipToPadding="false"
