--- a/component/src/main/res/layout/toast_common.xml
+++ b/component/src/main/res/layout/toast_common.xml
@@ -11,8 +11,10 @@
         android:id="@+id/tv_toast_message"
         style="@style/T_600_16_22_4"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="17dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
