--- a/app/src/main/res/layout/fragment_storage.xml
+++ b/app/src/main/res/layout/fragment_storage.xml
@@ -379,7 +379,7 @@
             <TextView
                 android:id="@+id/tv_empty_message"
                 style="@style/T_600_18_25_2"
-                bindVisible="@{viewModel.pagingState.itemCount > 0}"
+                bindVisible="@{viewModel.addresses.size() == 0}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
