--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -62,10 +63,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:importantForAccessibility="no"
-                android:src="@drawable/ic_alarm"
+                android:src="@{viewModel.hasNewNotification ? @drawable/ic_alarm_new : @drawable/ic_alarm}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/iv_home_profile"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/ic_alarm_new" />
 
             <ImageView
                 android:id="@+id/iv_home_profile"
