--- a/component/src/main/res/drawable/ic_alarm.xml
+++ b/component/src/main/res/drawable/ic_alarm.xml
@@ -4,13 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M10.002,22H14.002M4.4,9.6C4.4,5.403 7.803,2 12,2C16.197,2 19.6,5.403 19.6,9.6V12.389C19.6,14.5 20.092,16.583 21.036,18.471L21.2,18.8H2.8L2.964,18.471C3.908,16.583 4.4,14.5 4.4,12.389V9.6Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#1E1E1E"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M22,2m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
-      android:fillColor="#FF5858"/>
+      android:pathData="M12,3C8.355,3 5.4,5.955 5.4,9.6V12.389C5.4,14.246 5.046,16.082 4.361,17.8H19.64C18.954,16.082 18.6,14.246 18.6,12.389V9.6C18.6,5.955 15.645,3 12,3ZM3.4,9.6C3.4,4.85 7.25,1 12,1C16.75,1 20.6,4.85 20.6,9.6V12.389C20.6,14.345 21.056,16.274 21.93,18.024L22.094,18.353C22.25,18.662 22.233,19.031 22.051,19.325C21.868,19.62 21.547,19.8 21.2,19.8H2.8C2.453,19.8 2.132,19.62 1.949,19.325C1.767,19.031 1.751,18.662 1.906,18.353L2.07,18.024C2.945,16.274 3.4,14.345 3.4,12.389V9.6ZM9.002,22C9.002,21.448 9.449,21 10.002,21H14.002C14.554,21 15.002,21.448 15.002,22C15.002,22.552 14.554,23 14.002,23H10.002C9.449,23 9.002,22.552 9.002,22Z"
+      android:fillColor="#1E1E1E"
+      android:fillType="evenOdd"/>
 </vector>
