--- a/component/src/main/res/drawable/ic_alarm_new.xml
+++ b/component/src/main/res/drawable/ic_alarm_new.xml
@@ -10,4 +10,7 @@
       android:fillColor="#00000000"
       android:strokeColor="#1E1E1E"
       android:strokeLineCap="round"/>
+  <path
+      android:pathData="M22,2m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
+      android:fillColor="#FF5858"/>
 </vector>
