--- a/app/src/main/res/layout/activity_insight_list.xml
+++ b/app/src/main/res/layout/activity_insight_list.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="@{viewModel.region}"
+                android:text="@{viewModel.siGunGu + ` ` + viewModel.eupMyeonDong}"
                 android:textColor="@color/gray_900"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_back"
