--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="@{viewModel.myInfo.nickname}"
+                android:text="@{viewModel.myPageInfo.nickname}"
                 android:textColor="@color/gray_900"
                 app:layout_constraintBottom_toBottomOf="@id/iv_my_profile"
                 app:layout_constraintStart_toEndOf="@id/iv_my_profile"
@@ -139,7 +139,7 @@
                     style="@style/T_600_16_22_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.myInfo.writtenInsightCount + `개`}"
+                    android:text="@{viewModel.myPageInfo.insightCount + `개`}"
                     android:textColor="@color/orange_500"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +171,7 @@
                     style="@style/T_600_16_22_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.myInfo.totalExchangeCount + `건`}"
+                    android:text="@{viewModel.myPageInfo.exchangeCount + `건`}"
                     android:textColor="@color/orange_500"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
