--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -276,6 +276,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_my_current_version_info"
                 style="@style/T_500_14_19_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
