--- a/component/src/main/res/values/themes.xml
+++ b/component/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Base.Theme.Imdang" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Imdang" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/orange_500</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor">@color/gray_25</item>
