fix: 무료 패스권 팝업 사용자 닉네임 적용

--- a/app/src/main/res/layout/bottom_sheet_home_free_pass.xml
+++ b/app/src/main/res/layout/bottom_sheet_home_free_pass.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -75,9 +76,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/free_pass_description"
+                android:text="@{@string/free_pass_description(viewModel.nickname)}"
                 android:textColor="@color/orange_500"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/free_pass_description" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
